# src/main/kotlin/com/wutsi/marketplace/manager/dto/MeetingProviderSummary.kt
@@ -1,0 +1,11 @@
+package com.wutsi.marketplace.manager.dto
+
+import kotlin.Long
+import kotlin.String
+
+public data class MeetingProviderSummary(
+    public val id: Long = 0,
+    public val type: String = "",
+    public val name: String = "",
+    public val logoUrl: String = ""
+)
