# src/main/kotlin/com/wutsi/marketplace/manager/dto/SearchMeetingProviderResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.marketplace.manager.dto
+
+import kotlin.collections.List
+
+public data class SearchMeetingProviderResponse(
+    public val meetingProviders: List<MeetingProviderSummary> = emptyList()
+)
